chandeliers-lus/tests/fail/ui/tc/ops/binop-mismatch.stderr
error: Binary operator `+` expects arguments of the same type
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:2:21
  |
2 |     const N : int = 5 + 0.1;
  |                     ^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:2:21
  |
2 |     const N : int = 5 + 0.1;
  |                     ^
note: The right-hand-side is found to be of type float
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:2:25
  |
2 |     const N : int = 5 + 0.1;
  |                         ^^^

error: Binary operator `+` expects arguments of the same type
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:8:13
  |
8 |         o = i + 1 + 4 + 0.5;
  |             ^^^^^^^^^^^^^^^
  |
note: The left-hand-side is found to be of type int
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:8:13
  |
8 |         o = i + 1 + 4 + 0.5;
  |             ^^^^^^^^^
note: The right-hand-side is found to be of type float
 --> tests/fail/ui/tc/ops/binop-mismatch.rs:8:25
  |
8 |         o = i + 1 + 4 + 0.5;
  |                         ^^^

error: Binary operator `=` expects arguments of the same type
  --> tests/fail/ui/tc/ops/binop-mismatch.rs:13:23
   |
13 |     const B : bool = (1 + 1 = (true or false))
   |                       ^^^^^^^^^^^^^^^^^^^^^^^
   |
note: The left-hand-side is found to be of type int
  --> tests/fail/ui/tc/ops/binop-mismatch.rs:13:23
   |
13 |     const B : bool = (1 + 1 = (true or false))
   |                       ^^^^^
note: The right-hand-side is found to be of type bool
  --> tests/fail/ui/tc/ops/binop-mismatch.rs:13:31
   |
13 |     const B : bool = (1 + 1 = (true or false))
   |                               ^^^^^^^^^^^^^^^
